@@ -1,6 +1,5 @@
 package fr.ght1pc9kc.baywatch.techwatch.infra.persistence;
 
-import fr.ght1pc9kc.baywatch.common.api.model.Entity;
 import fr.ght1pc9kc.baywatch.common.domain.Hasher;
 import fr.ght1pc9kc.baywatch.common.infra.mappers.BaywatchMapper;
 import fr.ght1pc9kc.baywatch.dsl.tables.records.FeedsRecord;
@@ -13,6 +12,7 @@ import fr.ght1pc9kc.baywatch.tests.samples.infra.FeedsUsersRecordSample;
 import fr.ght1pc9kc.baywatch.tests.samples.infra.NewsRecordSamples;
 import fr.ght1pc9kc.baywatch.tests.samples.infra.UsersRecordSamples;
 import fr.ght1pc9kc.baywatch.tests.samples.infra.UsersRolesSamples;
+import fr.ght1pc9kc.entity.api.Entity;
 import fr.ght1pc9kc.juery.api.Criteria;
 import fr.ght1pc9kc.testy.core.extensions.ChainedExtension;
 import fr.ght1pc9kc.testy.jooq.WithDslContext;
@@ -72,15 +72,15 @@ class FeedRepositoryTest {
 
     @Test
     void should_get_user_feed() {
-        FeedsRecord expected = FeedRecordSamples.SAMPLE.records().get(0);
+        FeedsRecord expected = FeedRecordSamples.SAMPLE.records().getFirst();
         Entity<WebFeed> actual = tested.get(QueryContext.id(expected.getFeedId())).block();
 
         assertThat(actual).isNotNull();
         assertAll(
-                () -> assertThat(actual.id).isEqualTo(expected.getFeedId()),
-                () -> assertThat(actual.self.location()).isEqualTo(URI.create(expected.getFeedUrl())),
-                () -> assertThat(actual.self.name()).isEqualTo(expected.getFeedName()),
-                () -> assertThat(actual.self.tags()).isEqualTo(Set.of())
+                () -> assertThat(actual.id()).isEqualTo(expected.getFeedId()),
+                () -> assertThat(actual.self().location()).isEqualTo(URI.create(expected.getFeedUrl())),
+                () -> assertThat(actual.self().name()).isEqualTo(expected.getFeedName()),
+                () -> assertThat(actual.self().tags()).isEqualTo(Set.of())
         );
 
     }
@@ -110,7 +110,7 @@ class FeedRepositoryTest {
                 .build();
 
         StepVerifier.create(tested.persist(Collections.singleton(expected)))
-                .assertNext(actual -> assertThat(actual).isEqualTo(Entity.identify(expected.reference(), expected)))
+                .assertNext(actual -> assertThat(actual).isEqualTo(Entity.identify(expected).withId(expected.reference())))
                 .verifyComplete();
 
         FeedsRecord actual = dsl.selectFrom(FEEDS).where(FEEDS.FEED_ID.eq(expected.reference())).fetchOne();
@@ -121,29 +121,29 @@ class FeedRepositoryTest {
     @Test
     void should_persist_feeds_to_user(DSLContext dsl) {
         Entity<WebFeed> expected = Entity.identify(
-                FeedRecordSamples.JEDI.getFeedId(),
                 Mappers.getMapper(BaywatchMapper.class).recordToFeed(FeedRecordSamples.JEDI)
-                        .self.toBuilder()
+                        .self().toBuilder()
                         .name(FeedRecordSamples.JEDI.getFeedName() + " of Obiwan")
                         .tags(Set.of("jedi", "saber"))
-                        .build());
+                        .build()
+        ).withId(FeedRecordSamples.JEDI.getFeedId());
 
 
-        StepVerifier.create(tested.persistUserRelation(Collections.singleton(expected.self), OKENOBI.getUserId()))
+        StepVerifier.create(tested.persistUserRelation(Collections.singleton(expected.self()), OKENOBI.getUserId()))
                 .assertNext(actual -> assertThat(actual).isEqualTo(expected))
                 .verifyComplete();
 
         {
-            FeedsRecord actual = dsl.selectFrom(FEEDS).where(FEEDS.FEED_ID.eq(expected.id)).fetchOne();
+            FeedsRecord actual = dsl.selectFrom(FEEDS).where(FEEDS.FEED_ID.eq(expected.id())).fetchOne();
             assertThat(actual).isNotNull();
             assertThat(actual.getFeedName()).isEqualTo(FeedRecordSamples.JEDI.getFeedName());
         }
         {
-            FeedsUsersRecord actual = dsl.selectFrom(FEEDS_USERS).where(FEEDS_USERS.FEUS_FEED_ID.eq(expected.id))
+            FeedsUsersRecord actual = dsl.selectFrom(FEEDS_USERS).where(FEEDS_USERS.FEUS_FEED_ID.eq(expected.id()))
                     .fetchOne();
             assertThat(actual).isNotNull();
             assertThat(actual.getFeusUserId()).isEqualTo(OKENOBI.getUserId());
-            assertThat(actual.getFeusTags()).isEqualTo(String.join(",", expected.self.tags()));
+            assertThat(actual.getFeusTags()).isEqualTo(String.join(",", expected.self().tags()));
         }
     }
 
@@ -151,14 +151,14 @@ class FeedRepositoryTest {
     void should_update_feed(DSLContext dsl) {
         String feedOwnedOnlyByObywan = Hasher.identify(FeedRecordSamples.JEDI_BASE_URI.resolve("01"));
         Entity<WebFeed> expected = Entity.identify(
-                feedOwnedOnlyByObywan,
                 WebFeed.builder()
                         .reference(feedOwnedOnlyByObywan)
                         .location(URI.create("http://www.jedi.light/01"))
                         .name("Obiwan Kenobi")
                         .tags(Set.of("jedi", "light"))
-                        .build());
-        Mono<Entity<WebFeed>> update = tested.update(expected.id, OKENOBI.getUserId(), expected.self);
+                        .build()
+        ).withId(feedOwnedOnlyByObywan);
+        Mono<Entity<WebFeed>> update = tested.update(expected.id(), OKENOBI.getUserId(), expected.self());
         StepVerifier.create(update)
                 .expectNext(expected)
                 .verifyComplete();
@@ -212,13 +212,13 @@ class FeedRepositoryTest {
 
         {
             int countUser = dsl.fetchCount(FEEDS_USERS, FEEDS_USERS.FEUS_FEED_ID.in(ids)
-                    .and(FEEDS_USERS.FEUS_USER_ID.eq(OBIWAN.id)));
+                    .and(FEEDS_USERS.FEUS_USER_ID.eq(OBIWAN.id())));
             assertThat(countUser).isEqualTo(2);
         }
 
         tested.delete(QueryContext.builder()
                 .filter(Criteria.property(FEED_ID).in(ids))
-                .userId(OBIWAN.id)
+                .userId(OBIWAN.id())
                 .build()).block();
 
         {
@@ -232,7 +232,7 @@ class FeedRepositoryTest {
     @Test
     void should_list_orphan_feed() {
         List<Entity<WebFeed>> actuals = tested.list(QueryContext.all(Criteria.property(COUNT).eq(0))).collectList().block();
-        assertThat(actuals).extracting(e -> e.id).containsExactly(
-                FeedRecordSamples.FEEDS_RECORDS.get(FeedRecordSamples.FEEDS_RECORDS.size() - 1).getFeedId());
+        assertThat(actuals).extracting(Entity::id).containsExactly(
+                FeedRecordSamples.FEEDS_RECORDS.getLast().getFeedId());
     }
 }
